2006-01-29  Julian Mehnle  <julian@mehnle.net>

	* cmd.c: When invoking external viewer, probe VIEWER environment
	variable first, then PAGER, then fall back to "view".

2006-01-28  Roland Illig  <roland.illig@gmx.de>

	* cmd.c (toggle_listing_cmd): Included the brief listing mode in
	the list of listing modes that can be switched through using
	Alt-t. Patch provided in #10557. Fixes #10557.

2006-01-27  Roland Illig  <roland.illig@gmx.de>

	* Makefile.am: cons.saver is installed in $(pkglibexecdir), not
	in $(pkglibdir), to conform to the usual directory hierarchy
	standards. Fixes #2796.

	* Makefile.am, logging.h, logging.c: Added a new logging module
	to allow easy tracing of function calls and other events. It is
	only intended for debugging.

2006-01-24  Jindrich Makovicka  <makovick@kmlinux.fjfi.cvut.cz>

	* file.c (copy_file_file): In 'Reget' mode take into account
	the partially retrieved data when drawing the progress bar.

2006-01-23  Egmont Koblinger  <egmont@uhulinux.hu>

        * subshell.c: restart write() calls interrupted by sigchld which lead
	to some bytes being swallowed from the subshell's output.

2006-01-07  Roland Illig  <roland.illig@gmx.de>

	* view.c: Replaced calls to printw() with tty_printf() to get
	rid of the str_unconst() function.

2005-11-10  Pavel Roskin  <proski@gnu.org>

	* global.h [!ENABLE_NLS]: Provide replacement for ngettext.
	* screen.c (display_mini_info): Cast panel->total to unsigned
	long before passing it to ngettext() to avoid warnings.

2005-11-02  Pavel Roskin  <proski@gnu.org>

	* glibcompat.c: Move Q_ back ...
	* util.c: ... here.  Q_ is not defined by just including glib.h.
	The glib implementation doesn't strip prefix from translations,
	so it's not suitable for us.  Finally, it makes man2hlp depend
	on libintl.
	Reported by Leonard den Ottolander <leonard@den.ottolander.nl>

2005-11-02  Egmont Koblinger  <egmont@uhulinux.hu>

	* main.c (directory_history_add): Fix invalid directory preselection on
	cd.
